--- a/src/Interface/Index.fxml
+++ b/src/Interface/Index.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Interface.indexController">
+<GridPane alignment="center" hgap="10" stylesheets="CSS/index.css" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Interface.indexController">
    <columnConstraints>
       <ColumnConstraints maxWidth="0.0" minWidth="0.0" prefWidth="0.0" />
       <ColumnConstraints maxWidth="600.0" minWidth="600.0" prefWidth="600.0" />
@@ -19,7 +19,7 @@
       <RowConstraints />
    </rowConstraints>
    <children>
-      <Pane id="background" prefHeight="450.0" prefWidth="600.0" style="-fx-background-color: gray;" styleClass="background" stylesheets="@@background.css" GridPane.columnIndex="1">
+      <Pane id="background" prefHeight="450.0" prefWidth="600.0" style="-fx-background-color: gray;" styleClass="background" stylesheets="@CSS/index.css" GridPane.columnIndex="1">
          <children>
             <Label layoutX="32.0" layoutY="32.0" prefHeight="54.0" prefWidth="92.0" rotate="-3.8" text="Easy">
                <font>
@@ -55,18 +55,29 @@
              <Button fx:id="btnsingUp" layoutX="313.0" layoutY="142.0" mnemonicParsing="false" onAction="#cadastrar" text="Cadastra-se" />
 
 
-            <GridPane layoutX="290.0" layoutY="225.0" prefHeight="201.0" prefWidth="298.0" style="-fx-background-color: white;">
+            <GridPane layoutX="290.0" layoutY="225.0" prefHeight="201.0" prefWidth="298.0" style="-fx-background-color: white;" stylesheets="@CSS/index.css">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints maxHeight="122.0" minHeight="10.0" prefHeight="55.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="83.0" minHeight="0.0" prefHeight="67.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="83.0" minHeight="0.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="85.0" minHeight="10.0" prefHeight="65.0" vgrow="SOMETIMES" />
               </rowConstraints>
-            </GridPane>
+                <Label fx:id="labelAction" alignment="CENTER" prefHeight="42.0" prefWidth="89.0" styleClass="Label" stylesheets="@/Interface/CSS/index.css" text="Ação" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+
+                <Label fx:id="labelDrama" alignment="CENTER" prefHeight="42.0" prefWidth="89.0" styleClass="Label" stylesheets="@/Interface/CSS/index.css" text="Drama" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                 <Label fx:id="labelNacional" alignment="CENTER" prefHeight="42.0" prefWidth="127.0" styleClass="Label" stylesheets="@/Interface/CSS/index.css" text="Nacionais" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                 <Label fx:id="labelAdvent" alignment="CENTER" prefHeight="42.0" prefWidth="127.0" styleClass="Label" stylesheets="@/Interface/CSS/index.css" text="Aventura" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+
+                <Label fx:id="labelComedy" alignment="CENTER" prefHeight="42.0" prefWidth="124.0" styleClass="Label" stylesheets="@/Interface/CSS/index.css" text="Comedia" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                <Label fx:id="labelFamily" alignment="CENTER" prefHeight="42.0" prefWidth="127.0" styleClass="Label" stylesheets="@/Interface/CSS/index.css" text="Família" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+
+
+</GridPane>
             <TextField layoutX="16.0" layoutY="232.0" />
+
             <Button layoutX="180.0" layoutY="232.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="78.0" text="Pesquisar" />
 
          </children>
