--- a/src/Interface/CSS/index.css
+++ b/src/Interface/CSS/index.css
@@ -5,28 +5,11 @@
     -fx-font-family: "Comic Sans MS";
     -fx-font-size: 20pt;
     -fx-font-weight: bolder;
+    -fx-background-color: gray;
+    -fx-text-fill: #a5c3ff;
 
 }
-#labelAction{
 
-    -fx-text-fill: cornflowerblue;
-}
-#labelAdvent{
-
-    -fx-text-fill: darkgreen;
-
-}
-#labelComedy{
-    -fx-text-fill: yellow;
-}
-#labelDrama{
-    -fx-text-fill: darkred;
-}
-#labelFamily{
-
-    -fx-text-fill: purple;
-}
-#labelNacional{
-
-    -fx-text-fill: green;
+.Label:hover{
+    -fx-text-fill: #53c7af;
 }
