--- a/src/Interface/FXML/index.fxml
+++ b/src/Interface/FXML/index.fxml
@@ -1,14 +1,93 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.TilePane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="Interface.Controllers.indexController"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@../CSS/index.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Interface.Controllers.indexController">
+   <children>
+      <GridPane prefHeight="400.0" prefWidth="600.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="194.0" minHeight="10.0" prefHeight="194.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="128.0" minHeight="10.0" prefHeight="47.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="159.0" minHeight="10.0" prefHeight="159.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
 
+            <TilePane prefHeight="200.0" prefWidth="200.0">
+               <children>
+                   <Label fx:id="title" alignment="BOTTOM_CENTER" text="Easy" />
+                   <Label fx:id="subtitle" alignment="BOTTOM_CENTER" text="Films" />
+               </children></TilePane>
+
+
+
+            <GridPane GridPane.columnIndex="1">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="144.0" minWidth="10.0" prefWidth="113.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="216.0" minWidth="10.0" prefWidth="187.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="64.0" minHeight="10.0" prefHeight="58.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="91.0" minHeight="10.0" prefHeight="62.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="74.0" minHeight="10.0" prefHeight="74.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+
+                <Label styleClass="label" text="Login: " GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                <TextField fx:id="loginField" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+
+                <Label styleClass="label" text="Senha: " GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+
+                <Button fx:id="btnLogin" text="Login" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                <Button fx:id="btnCadastro" text="Cadastre-se" GridPane.columnIndex="1" GridPane.rowIndex="2" onAction="#cadastrar"/>
+
+            </GridPane>
+            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+
+                <Label styleClass="Label" text="Ação" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+                <Label styleClass="Label" text="Aventura" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                <Label styleClass="Label" text="Nacionais" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+
+                <Label styleClass="Label" text="Drama" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+                <Label styleClass="Label" text="Comedia" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Label styleClass="Label"  fx:id="spLabel"  text="Ficção Científica" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+
+
+
+            </GridPane>
+            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
+            <Pane fx:id="img_pane" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2" />
+         </children>
+      </GridPane>
+   </children>
 </AnchorPane>
