--- a/src/Interface/FXML/form.fxml
+++ b/src/Interface/FXML/form.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -40,6 +41,7 @@
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -49,21 +51,25 @@
               <Label styleClass="label" text="Nome: " GridPane.columnIndex="0" GridPane.rowIndex="0" />
                 <TextField fx:id="nomeField" styleClass="field" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-              <Label styleClass="label" text="Email: " GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                <TextField fx:id="emailField" styleClass="field" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Label styleClass="label" text="Data de Aniversário: " GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                <DatePicker prefHeight="25.0" prefWidth="207.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-              <Label styleClass="label" text="Crie um login: " GridPane.columnIndex="0" GridPane.rowIndex="2" />
-                <TextField fx:id="cLoginField" styleClass="field" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+              <Label styleClass="label" text="Email: " GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                <TextField fx:id="emailField" styleClass="field" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-                <Label styleClass="label" text="Crie uma senha: " GridPane.columnIndex="0" GridPane.rowIndex="3" />
-                <PasswordField fx:id="cPasswordField" styleClass="field" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+              <Label styleClass="label" text="Crie um login: " GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                <TextField fx:id="cLoginField" styleClass="field" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-                <Label styleClass="label" text="Confirme a senha: " GridPane.columnIndex="0" GridPane.rowIndex="4" />
-                <PasswordField fx:id="ccPasswordField" styleClass="field" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                <Label styleClass="label" text="Crie uma senha: " GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                <PasswordField fx:id="cPasswordField" styleClass="field" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+
+                <Label styleClass="label" text="Confirme a senha: " GridPane.columnIndex="0" GridPane.rowIndex="5" />
+                <PasswordField fx:id="ccPasswordField" styleClass="field" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+
 
             </GridPane>
 
-             <CheckBox mnemonicParsing="true" fx:id="agree" text="Concordo com os termos de privacidade" GridPane.rowIndex="2" />
+             <CheckBox fx:id="agree" mnemonicParsing="true" text="Concordo com os termos de privacidade" GridPane.rowIndex="2" />
 
             <GridPane prefHeight="69.0" prefWidth="405.0" GridPane.rowIndex="3">
               <columnConstraints>
