--- a/src/View/Form/form.fxml
+++ b/src/View/Form/form.fxml
@@ -68,7 +68,8 @@
                <children>
                    <Label fx:id="title" layoutY="10.0" text="Bem vindo ao Cadastro" />
                    <Label fx:id="subTitle" layoutY="40.0" prefHeight="40.0" prefWidth="412.0" text="Preencha o Formulario abaixo" />
-                   <Label fx:id="erroLabel" layoutY="70" />
+                   <Label fx:id="lblMsg" layoutY="70" />
+
                </children>
             </Pane>
             <GridPane prefHeight="38.0" prefWidth="418.0" GridPane.rowIndex="2">
@@ -85,8 +86,6 @@
                </children>
             </GridPane>
 
-
-
              <GridPane prefHeight="63.0" prefWidth="370.0" GridPane.rowIndex="3">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -99,8 +98,6 @@
 
                  <Button fx:id="btnVoltar" onAction="#toIndex" prefHeight="25.0" prefWidth="69.0" text="Voltar" GridPane.columnIndex="0"/>
                  <Button fx:id="btnConfirmar" onAction="#ConfirmaCliente" text="Confirmar" GridPane.columnIndex="1" />
-
-                <ToggleButton text="Cliente Premium" GridPane.rowIndex="1"/>
             </GridPane>
 
          </children>
