--- a/src/View/Index/index.fxml
+++ b/src/View/Index/index.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -33,7 +32,7 @@
                </children></TilePane>
 
 
-
+             <Label fx:id="lblMsg" layoutY="70" GridPane.rowIndex="1" GridPane.columnIndex="1" />
             <GridPane GridPane.columnIndex="1">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="144.0" minWidth="10.0" prefWidth="113.0" />
@@ -51,7 +50,7 @@
                 <Label styleClass="label" text="Senha: " GridPane.columnIndex="0" GridPane.rowIndex="1" />
                 <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-                <Button fx:id="btnLogin" onAction="#login" prefHeight="25.0" prefWidth="69.0" text="Login" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                <Button fx:id="btnLogin" onAction="#toLogin" prefHeight="25.0" prefWidth="69.0" text="Login" GridPane.columnIndex="0" GridPane.rowIndex="2" />
                 <Button fx:id="btnCadastro" onAction="#cadastrar" text="Cadastre-se" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
             </GridPane>
@@ -77,16 +76,7 @@
 
 
             </GridPane>
-            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-            </GridPane>
-            <ImageView fx:id="ImageView" fitHeight="157.0" fitWidth="296.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2"/>
+            <ImageView fx:id="ImageView" fitHeight="157.0" fitWidth="296.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2" />
 
 
 
