--- a/src/View/Index/index.fxml
+++ b/src/View/Index/index.fxml
@@ -2,59 +2,49 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.TilePane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@index.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Index.indexController">
+<AnchorPane maxHeight="400" maxWidth="600" minHeight="400" minWidth="600" prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@index.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Index.indexController">
    <children>
       <GridPane prefHeight="400.0" prefWidth="600.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="402.0" minWidth="10.0" prefWidth="297.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="382.0" minWidth="10.0" prefWidth="303.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="194.0" minHeight="10.0" prefHeight="194.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="128.0" minHeight="10.0" prefHeight="47.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="159.0" minHeight="10.0" prefHeight="159.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="85.0" minHeight="10.0" prefHeight="85.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="192.0" minHeight="10.0" prefHeight="153.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="182.0" minHeight="10.0" prefHeight="162.0" vgrow="SOMETIMES" />
         </rowConstraints>
-         <children>
-
-            <TilePane prefHeight="200.0" prefWidth="200.0">
-               <children>
-                   <Label fx:id="title" alignment="BOTTOM_CENTER" text="Easy" />
-                   <Label fx:id="subtitle" alignment="BOTTOM_CENTER" text="Films" />
-               </children></TilePane>
 
 
-             <Label fx:id="lblMsg" layoutY="70" GridPane.rowIndex="1" GridPane.columnIndex="1" />
-            <GridPane GridPane.columnIndex="1">
+          <children>
+            <GridPane GridPane.rowIndex="1">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="144.0" minWidth="10.0" prefWidth="113.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="216.0" minWidth="10.0" prefWidth="187.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="191.0" minWidth="10.0" prefWidth="114.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="292.0" minWidth="10.0" prefWidth="193.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints maxHeight="64.0" minHeight="10.0" prefHeight="58.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="93.0" minHeight="10.0" prefHeight="76.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="74.0" minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
 
                 <Label styleClass="label" text="Login: " GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                <TextField fx:id="loginField" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                <TextField fx:id="loginField" styleClass="field" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
                 <Label styleClass="label" text="Senha: " GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <TextField fx:id="passField" styleClass="field" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-                <Button fx:id="btnLogin" onAction="#toLogin" prefHeight="25.0" prefWidth="69.0" text="Login" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-                <Button fx:id="btnCadastro" onAction="#cadastrar" text="Cadastre-se" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-
+                <Button fx:id="btnEntrar" onAction="#toLogin" text="Entrar" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                <Button fx:id="btnCadastro" onAction="#toForm" text="Cadastrar" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             </GridPane>
-            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -65,22 +55,18 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
 
-                <Label onMouseReleased="#changeImg" styleClass="Label" text="Ação" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                <Label styleClass="Label" text="Ação" GridPane.columnIndex="0" GridPane.rowIndex="0" />
                 <Label styleClass="Label" text="Aventura" GridPane.columnIndex="0" GridPane.rowIndex="1" />
                 <Label styleClass="Label" text="Nacionais" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-
                 <Label styleClass="Label" text="Drama" GridPane.columnIndex="1" GridPane.rowIndex="0" />
                 <Label styleClass="Label" text="Comedia" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                <Label fx:id="spLabel" styleClass="Label" text="Ficção Científica" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-
-
+                <Label styleClass="Label" text="Família" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
             </GridPane>
-            <ImageView fx:id="ImageView" fitHeight="157.0" fitWidth="296.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2" />
-
-
-
+            <ImageView fitHeight="159.0" fitWidth="298.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label fx:id="lblMsg" alignment="CENTER" prefHeight="83.0" prefWidth="296.0" text="" GridPane.columnIndex="0" GridPane.rowIndex="2" />
          </children>
+
       </GridPane>
    </children>
 </AnchorPane>
