--- a/src/view/index/index.fxml
+++ b/src/view/index/index.fxml
@@ -9,7 +9,8 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane maxHeight="400" maxWidth="600" minHeight="400" minWidth="600" prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@index.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Index.indexController">
+<?import javafx.scene.control.PasswordField?>
+<AnchorPane maxHeight="400" maxWidth="600" minHeight="400" minWidth="600" prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@index.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.index.indexController">
    <children>
       <GridPane prefHeight="400.0" prefWidth="600.0">
         <columnConstraints>
@@ -39,7 +40,7 @@
                 <TextField fx:id="loginField" styleClass="field" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
                 <Label styleClass="label" text="Senha: " GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                <TextField fx:id="passField" styleClass="field" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <PasswordField fx:id="passField" styleClass="field" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
                 <Button fx:id="btnEntrar" onAction="#toLogin" text="Entrar" GridPane.columnIndex="0" GridPane.rowIndex="2" />
                 <Button fx:id="btnCadastro" onAction="#toForm" text="Cadastrar" GridPane.columnIndex="1" GridPane.rowIndex="2" />
@@ -55,7 +56,7 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
 
-                <Label styleClass="Label" text="Ação" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                <Label styleClass="Label" text="Ação" onMouseReleased="#changeImg" GridPane.columnIndex="0" GridPane.rowIndex="0" />
                 <Label styleClass="Label" text="Aventura" GridPane.columnIndex="0" GridPane.rowIndex="1" />
                 <Label styleClass="Label" text="Nacionais" GridPane.columnIndex="0" GridPane.rowIndex="2" />
                 <Label styleClass="Label" text="Drama" GridPane.columnIndex="1" GridPane.rowIndex="0" />
@@ -63,7 +64,7 @@
                 <Label styleClass="Label" text="Família" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
             </GridPane>
-            <ImageView fitHeight="159.0" fitWidth="298.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <ImageView fx:id="ImageView" fitHeight="159.0" fitWidth="298.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Label fx:id="lblMsg" alignment="CENTER" prefHeight="83.0" prefWidth="296.0" text="" GridPane.columnIndex="0" GridPane.rowIndex="2" />
          </children>
 
