Adaptação a marcação e atualização da página home

--- a/src/br/ip2/project/view/index/index.css
+++ b/src/br/ip2/project/view/index/index.css
@@ -22,7 +22,7 @@
     -fx-font-family: "Consolas";
 }
 .label{
-    -fx-text-fill: #0045ff;
+    -fx-text-fill: orange;
     -fx-font-family: "Comic Sans MS";
     -fx-font-size: 14pt;
 
