--- a/src/br/ip2/project/view/home/home.css
+++ b/src/br/ip2/project/view/home/home.css
@@ -30,3 +30,10 @@
 .background{
     -fx-background-image: url(img/anchorPane.background-image.jpg);
 }
+#paneText{
+    -fx-text-fill: green;
+    -fx-font-size: 12pt;
+}
+#divPanel{
+    -fx-background-image: url("img/divPanel.jpg");
+}
