--- a/src/br/ip2/project/view/index/index.css
+++ b/src/br/ip2/project/view/index/index.css
@@ -1,6 +1,6 @@
 
 .background{
-    -fx-background-image: url("img/index.background-img.jpg") no-repeat;
+    -fx-background-image: url("../img/index.background-img.jpg") no-repeat;
     -fx-background-size: 600px 450px;
 }
 #title{
@@ -43,7 +43,7 @@
 }
 .Label:hover#ImageView{
 
-    fx-image: url(img/action.pane.index.jpg) no-repeat;
+    fx-image: url(../img/action.pane.index.jpg) no-repeat;
     -fx-background-size: 300px 200px;
 }
 
