--- a/src/br/ip2/project/view/home/home.fxml
+++ b/src/br/ip2/project/view/home/home.fxml
@@ -16,10 +16,9 @@
    <children>
       <MenuBar prefHeight="35.0" prefWidth="614.0" styleClass="menu-bar">
         <menus>
-          <Menu mnemonicParsing="false" styleClass="menu" text="Perfil">
+          <Menu mnemonicParsing="false" styleClass="menu" text="Eu">
             <items>
-                <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Vizualizar" />
-                <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Editar" />
+                <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Perfil" />
                 <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Sair" />
             </items>
           </Menu>
@@ -40,20 +39,18 @@
       <TilePane layoutX="8.0" layoutY="45.0" prefHeight="56.0" prefWidth="271.0" />
        <GridPane layoutX="9.0" layoutY="122.0" prefHeight="275.0" prefWidth="345.0">
            <columnConstraints>
-               <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.0" minWidth="10.0" prefWidth="177.0"/>
-               <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" prefWidth="168.0"/>
+               <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.0" minWidth="10.0" prefWidth="177.0" />
+               <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" prefWidth="168.0" />
            </columnConstraints>
            <rowConstraints>
-               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
            </rowConstraints>
-           <Pane fx:id="action" prefHeight="200.0" prefWidth="200.0" styleClass="background-pane"
-                 GridPane.columnIndex="0" GridPane.rowIndex="0">
-               <Label alignment="BOTTOM_CENTER" layoutX="64.0" layoutY="20.0" prefHeight="56.0" prefWidth="96.0"
-                      styleClass="label-pane" text="Ação"/>
+           <Pane fx:id="action" prefHeight="200.0" prefWidth="200.0" styleClass="background-pane" GridPane.columnIndex="0" GridPane.rowIndex="0">
+               <Label alignment="BOTTOM_CENTER" layoutX="6.0" layoutY="36.0" prefHeight="56.0" prefWidth="96.0" styleClass="label-pane" text="Ação" />
            </Pane>
        </GridPane>
-      <WebView layoutX="371.0" layoutY="132.0" prefHeight="200.0" prefWidth="241.0" fx:id="web"/>
+      <WebView fx:id="web" layoutX="371.0" layoutY="132.0" prefHeight="200.0" prefWidth="241.0" />
    </children>
 </AnchorPane>
