--- a/src/br/ip2/project/view/perfil/perfil.fxml
+++ b/src/br/ip2/project/view/perfil/perfil.fxml
@@ -7,38 +7,55 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Circle?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ip2.project.view.perfil.perfilController">
    <children>
-      <Pane layoutX="14.0" layoutY="14.0" prefHeight="163.0" prefWidth="176.0" />
-      <GridPane layoutX="236.0" layoutY="23.0" prefHeight="163.0" prefWidth="352.0">
+      <GridPane prefHeight="400.0" prefWidth="600.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="246.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="354.0" minWidth="10.0" prefWidth="354.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="187.0" minHeight="10.0" prefHeight="187.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="124.0" minHeight="6.0" prefHeight="33.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="226.0" minHeight="10.0" prefHeight="180.0" vgrow="SOMETIMES" />
         </rowConstraints>
-         <children>
-            <Label text="Label" />
-            <Label text="Label" GridPane.rowIndex="1" />
-            <Label text="Label" GridPane.rowIndex="2" />
-            <Label text="Label" GridPane.columnIndex="1" />
-            <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-         </children>
+
+          <Pane layoutX="14.0" layoutY="14.0" prefHeight="201.0" prefWidth="246.0" GridPane.columnIndex="0" GridPane.rowIndex="0">
+            <children>
+               <Circle fill="DODGERBLUE" layoutX="106.0" layoutY="104.0" radius="83.0" stroke="BLACK" strokeType="INSIDE" />
+            </children></Pane>
+
+         <GridPane prefHeight="112.0" prefWidth="344.0" GridPane.columnIndex="1" GridPane.rowIndex="0">
+           <columnConstraints>
+             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+           </columnConstraints>
+           <rowConstraints>
+             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+           </rowConstraints>
+            <children>
+               <Label text="Nome: " />
+               <Label text="Data de Nascimento: " GridPane.rowIndex="1" />
+               <Label text="Tipo de Cliente: " GridPane.rowIndex="2" />
+               <Label text="Label" GridPane.columnIndex="1" />
+               <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+               <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            </children>
+         </GridPane>
+         <SplitPane dividerPositions="0.3" orientation="VERTICAL" prefHeight="200.0" prefWidth="592.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+           <items>
+             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="87.0" prefWidth="590.0">
+                  <children>
+                     <Label layoutX="48.0" layoutY="22.0" text="Label" />
+                  </children>
+               </AnchorPane>
+             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" />
+           </items>
+         </SplitPane>
       </GridPane>
-      <SplitPane dividerPositions="0.3181818181818182" layoutX="5.0" layoutY="200.0" orientation="VERTICAL" prefHeight="200.0" prefWidth="592.0">
-        <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
-               <children>
-                  <Label layoutX="48.0" layoutY="22.0" text="Label" />
-               </children>
-            </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" />
-        </items>
-      </SplitPane>
    </children>
 </AnchorPane>
