--- a/src/br/ip2/project/view/perfil/perfil.fxml
+++ b/src/br/ip2/project/view/perfil/perfil.fxml
@@ -1,61 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.shape.Circle?>
+<?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ip2.project.view.perfil.perfilController">
-   <children>
-      <GridPane prefHeight="400.0" prefWidth="600.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="246.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="354.0" minWidth="10.0" prefWidth="354.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="187.0" minHeight="10.0" prefHeight="187.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="124.0" minHeight="6.0" prefHeight="33.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="226.0" minHeight="10.0" prefHeight="180.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@perfil.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ip2.project.view.perfil.Controller">
 
-          <Pane layoutX="14.0" layoutY="14.0" prefHeight="201.0" prefWidth="246.0" GridPane.columnIndex="0" GridPane.rowIndex="0">
-            <children>
-               <Circle fx:id="circle" fill="DODGERBLUE" layoutX="106.0" layoutY="104.0" opacity="0.85" radius="83.0" stroke="BLACK" strokeType="INSIDE" styleClass="circle-background" />
-            </children></Pane>
 
-         <GridPane prefHeight="112.0" prefWidth="344.0" GridPane.columnIndex="1" GridPane.rowIndex="0">
-           <columnConstraints>
-             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-           </columnConstraints>
-           <rowConstraints>
-             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-           </rowConstraints>
-            <children>
-               <Label text="Nome: " />
-               <Label text="Data de Nascimento: " GridPane.rowIndex="1" />
-               <Label text="Tipo de Cliente: " GridPane.rowIndex="2" />
-               <Label fx:id="nome" text="Label" GridPane.columnIndex="1" />
-               <Label fx:id="dataNasc" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-               <Label fx:id="tipoCliente" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            </children>
-         </GridPane>
-         <SplitPane dividerPositions="0.3" orientation="VERTICAL" prefHeight="200.0" prefWidth="592.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-           <items>
-             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="87.0" prefWidth="590.0">
-                  <children>
-                     <Label layoutX="48.0" layoutY="22.0" text="Favoritos" />
-                  </children>
-               </AnchorPane>
-             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" />
-           </items>
-         </SplitPane>
-      </GridPane>
-   </children>
 </AnchorPane>
