--- a/src/br/ip2/project/view/home/home.fxml
+++ b/src/br/ip2/project/view/home/home.fxml
@@ -4,21 +4,17 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.TilePane?>
-<?import javafx.scene.web.WebView?>
 
-<AnchorPane fx:id="anchor" prefHeight="400.0" prefWidth="600" styleClass="background" stylesheets="@home.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ip2.project.view.home.Controller">
+<AnchorPane prefHeight="450.0" prefWidth="600" styleClass="background" stylesheets="@home.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ip2.project.view.home.Controller">
    <children>
-      <MenuBar prefHeight="35.0" prefWidth="614.0" styleClass="menu-bar">
+      <MenuBar prefHeight="35.0" prefWidth="638.0" styleClass="menu-bar">
         <menus>
           <Menu mnemonicParsing="false" styleClass="menu" text="Eu">
             <items>
-                <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Perfil" onAction="#toPerfil" />
+                <MenuItem mnemonicParsing="false" onAction="#toPerfil" styleClass="menu-item" text="Perfil" />
                 <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Meus Filmes" />
                 <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Adicionar Filme" />
                 <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Remover Filme" />
@@ -29,8 +25,7 @@
           <Menu mnemonicParsing="false" styleClass="menu" text="Galeira de Filmes">
             <items>
               <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Visitar Estante" />
-                <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Comprar" />
-                <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Remover Filme" />
+                <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Meus Favoritos" />
                 <MenuItem mnemonicParsing="false" styleClass="menu-item" text="Compartilhar" />
             </items>
           </Menu>
@@ -41,21 +36,13 @@
           </Menu>
         </menus>
       </MenuBar>
-      <TilePane layoutX="8.0" layoutY="45.0" prefHeight="56.0" prefWidth="271.0" />
-       <GridPane layoutX="9.0" layoutY="122.0" prefHeight="275.0" prefWidth="345.0">
-           <columnConstraints>
-               <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.0" minWidth="10.0" prefWidth="177.0" />
-               <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" prefWidth="168.0" />
-           </columnConstraints>
-           <rowConstraints>
-               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-           </rowConstraints>
-           <Pane fx:id="action" prefHeight="200.0" prefWidth="200.0" styleClass="background-pane" GridPane.columnIndex="0" GridPane.rowIndex="0">
-               <Label alignment="BOTTOM_CENTER" layoutX="6.0" layoutY="36.0" prefHeight="56.0" prefWidth="96.0" styleClass="label-pane" text="Ação" />
-           </Pane>
-       </GridPane>
-      <WebView fx:id="web" layoutX="371.0" layoutY="132.0" prefHeight="200.0" prefWidth="241.0" />
+      <Pane layoutX="14.0" layoutY="90.0" prefHeight="300.0" prefWidth="301.0" />
+      <ScrollPane layoutX="350.0" layoutY="90.0" prefHeight="300.0" prefWidth="250.0">
+        <content>
+          <AnchorPane fx:id="feedNoticias" minHeight="0.0" minWidth="0.0" prefHeight="300.0" prefWidth="250.0" />
+        </content>
+      </ScrollPane>
+      <Label layoutX="24.0" layoutY="54.0" styleClass="title" text="Para Você Hoje" />
+      <Label layoutX="342.0" layoutY="54.0" styleClass="title" text="Dos Seus Amigos" />
    </children>
 </AnchorPane>
